samples/_failures_safe/1761521732_c4e990_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c3c86c0.c: In function ‘main’:
./samples/SAFE/__tmp_4c3c86c0.c:136:30: error: missing terminating " character
  136 |     add_log_entry(&analyzer, "2024-01-15 10:
      |                              ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4c3c86c0.c:136:5: error: expected expression at end of input
  136 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_4c3c86c0.c:136:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_4c3c86c0.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_4c3c86c0.c:136:5: error: expected declaration or statement at end of input
  136 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
